Fixed alignment and footer

--- a/Assets/CSS/styel.css
+++ b/Assets/CSS/styel.css
@@ -3,10 +3,6 @@
     --text-background: black;    
 }
 
-* {
-    box-sizing: border-box;
-}
-
 html {
     scroll-behavior: smooth;
 }
@@ -75,25 +71,6 @@ p {
     color: var(--text-color);
 }
 
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    gap: 15px 15px;
-
-}
-
-.float-works {
-    display: table;
-    float: left;
-    margin: 20px;
-    content: "";
-    clear: both;
-    width: 200px;
-    height: 200px;
-    border-right: 5px solid black; 
-}
-
 .float {
     float: left;
     margin: 20px;
@@ -105,10 +82,21 @@ p {
     border-right: 5px solid black;
 }
 
+.float-works {
+    display: block;
+    float: left;
+    margin: 20px;
+    content: "";
+    clear: both;
+    width: 200px;
+    height: 200px;
+}
+
 .container-center {
     position: relative;
+    left: 15%;
     display:block;
-    margin: auto;
+    margin: 20px;
     width: 75%;
     border: 5px solid black;
 }
@@ -121,6 +109,9 @@ p {
 
 .container {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    left: 40%;
     margin: 20px;
     border: 5px solid black;
     width: 25%;
@@ -156,7 +147,7 @@ img:hover {
 }
 
 .contact {
-    position: relative;
+    width: 100%;
     display: block;
     background-color: rgb(197, 197, 197);
     color: black;
@@ -181,11 +172,16 @@ div2 ul {
 }
 
 div2 li a {
-    display: block;
+    display: inline;
     margin-left: 100px;
-    padding: 14px 16px;
+    padding: 10px 10px;
     text-decoration: none;
 
+}
+
+footer {
+    text-align: center;
+    align-items: c;
 }
 
 @media screen and (max-width: 768px) {
